some fixes in player

--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -93,7 +93,9 @@
     <div class="row playerBar">
         <div class="nav">
             <ul class="bg-primary">
-                <li class="fa fa-image playerBtn"></li>
+                <li class="fa fa-image playerBtn">
+                    <img src="" id="albumPlayer"/>
+                </li>
                 <li class="fa fa-play playerBtn" id="playStop" onclick="holyplayer.togglePlay()"> </li>
                 <li class="fa fa-backward playerBtn" onclick="holyplayer.back()"></li>
                 <li class="fa fa-forward playerBtn" onclick="holyplayer.forward()"></li>
