--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -96,7 +96,7 @@
                 <li class="fa fa-image playerBtn">
                     <img src="" id="albumPlayer"/>
                 </li>
-                <li class="fa fa-play playerBtn" id="playStop" onclick="holyplayer.togglePlay()"> </li>
+                <li class="fa fa-play playerBtn playStop" onclick="holyplayer.togglePlay()"> </li>
                 <li class="fa fa-backward playerBtn" onclick="holyplayer.back()"></li>
                 <li class="fa fa-forward playerBtn" onclick="holyplayer.forward()"></li>
                 <li class="fa fa-clock-o playerTime">
