--- a/src/NoName/WebLayer/Views/Song/SongList.cshtml
+++ b/src/NoName/WebLayer/Views/Song/SongList.cshtml
@@ -37,7 +37,7 @@
                 <a class="details" id="@item.Id" href="@Url.Action("Details", new {id = item.Id})">
                     <i class="fa fa-2x fa-info"></i>
                 </a>
-                <a class="delete" id="@item.Id" href="@Url.Action("Delete", new {id = item.Id})">
+                <a class="delete" id="@item.Id" href="#"onclick="songManagement.delete(@item.Id)">
                     <i class="fa fa-2x fa-trash"></i>
                 </a>
             </td>
@@ -50,6 +50,12 @@ Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) from @Model.Pa
 @Html.PagedListPager(Model, page => Url.Action("Index", new {page}))
 
 <script>
+
+    var songManagement = new SongManagementVm();
+    songManagement.deleteSongUrlPartial = '@Url.Action("DeletePartial", "Song")';
+    songManagement.deleteSongUrl = '@Url.Action("Delete", "Song")';
+
+
     $(document).ready(function() {
         $('[data-toggle="tooltip"]').tooltip();
         var currentNumber = 0;
