some search fixes

--- a/src/NoName/WebLayer/Content/HolyStream/holystream.css
+++ b/src/NoName/WebLayer/Content/HolyStream/holystream.css
@@ -27,6 +27,9 @@
     display: none;
 }
 
+.serachBarItem {
+    margin-top: 7px;
+}
 
 /* make sidebar nav vertical */ 
 @media (min-width: 768px) {
