--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -83,7 +83,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-md-11">
+        <div class="col-md-11" id="body">
             @RenderBody()
         </div>
        
@@ -104,7 +104,7 @@
                 </li>
                 <li class="fa fa-play playerBtn playStop" onclick="holyplayer.togglePlay()"> </li>
                 <li class="fa fa-backward playerBtn" onclick="holyplayer.back()"></li>
-                <li class="fa fa-forward playerBtn" onclick="holyplayer.forward()"></li>
+                <li class="fa fa-forward playerBtn" onclick="holyplayer.forward()"></li>             
                 <li class="fa fa-clock-o playerTime">
                     <span id="timeState"></span>
                 </li>
@@ -122,7 +122,7 @@
             <source src=""/>
         </audio>
     <div id="uploadForm" class="modal fade" role="dialog"></div>
-
+  
     <script>
         var fileUploadManage = new FileUpload();
         fileUploadManage.uploadFileUrl = '@Url.Action("AddFile", "Song")';
