--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -18,11 +18,14 @@
         <div class="navbar-header">
             <ul class="nav nav-pills">
                 <li> @Html.ActionLink("Home", "Index", "Home") </li>
-                <li><a href="@Url.Action("Index", "Song")">Songs
-                @{
-                    Html.RenderAction("SongsCount","Song");
-                }
-                    </a></li>
+                <li>
+                    <a href="@Url.Action("Index", "Song")">
+                        Songs
+                        @{
+                            Html.RenderAction("SongsCount", "Song");
+                        }
+                    </a>
+                </li>
                 <li>@Html.ActionLink("Playlists", "Index", "Playlist")</li>
                 <li class="dropdown">
                     <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="False">
@@ -40,53 +43,20 @@
                     }
                 </li>
             </ul>
+        </div>
     </div>
-</div>
 </nav>
 
 <div class="col-xs-12">
 
     <div class="row">
-        <div class="col-md-1">
-            <div class="sidebar-nav">
-                <div class="navbar navbar-default" role="navigation">
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".sidebar-navbar-collapse">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <span class="visible-xs navbar-brand">Holystream</span>
-                    </div>
-                    <div class="navbar-collapse collapse sidebar-navbar-collapse">
-                        <ul class="nav navbar-nav">
-                            <li class="active uploadBtn" data-toggle="modal" data-target="#uploadForm"> <a href="#"><i class="fa fa-upload"></i> Upload </a></li>
-                            <li><a href="#">Menu Item 2</a></li>
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Action</a></li>
-                                    <li><a href="#">Another action</a></li>
-                                    <li><a href="#">Something else here</a></li>
-                                    <li class="divider"></li>
-                                    <li class="dropdown-header">Nav header</li>
-                                    <li><a href="#">Separated link</a></li>
-                                    <li><a href="#">One more separated link</a></li>
-                                </ul>
-                            </li>
-                            <li><a href="#">Menu Item 4</a></li>
-                            <li><a href="#">Reviews <span class="badge">1,118</span></a></li>
-
-                        </ul>
-                    </div><!--/.nav-collapse -->
-                </div>
-            </div>
-        </div>
+        @{
+            Html.RenderPartial("_UserNavbar");
+        }
         <div class="col-md-11" id="body">
             @RenderBody()
         </div>
-       
+
     </div>
     <hr/>
     <footer class="text-center">
@@ -97,53 +67,32 @@
         </div>
     </footer>
     <div class="row playerBar">
-        <div class="nav">
-            <ul class="bg-primary">
-                <li class="fa fa-image playerBtn">
-                    <img src="" id="albumPlayer"/>
-                </li>
-                <li class="fa fa-play playerBtn playStop" onclick="holyplayer.togglePlay()"> </li>
-                <li class="fa fa-backward playerBtn" onclick="holyplayer.back()"></li>
-                <li class="fa fa-forward playerBtn" onclick="holyplayer.forward()"></li>             
-                <li class="fa fa-clock-o playerTime">
-                    <span id="timeState"></span>
-                </li>
-                <li class="fa fa-file playerFileName">
-                    <span class="text-capitalize" id="playerCurrentSong"></span>
-                </li>
-             </ul>
-        </div>
-
-
+        @{
+            Html.RenderPartial("_Player");
+        }
     </div>
 
-   
-        <audio id="player" class="audioPlayer">
-            <source src=""/>
-        </audio>
-    <div id="uploadForm" class="modal fade" role="dialog"></div>
-  
-    <script>
-        var fileUploadManage = new FileUpload();
-        fileUploadManage.uploadFileUrl = '@Url.Action("AddFile", "Song")';
-        fileUploadManage.uploadFileUrlPartial = '@Url.Action("AddFilePartial", "Song")';
 
-        var holyplayer = new HolyPlayerVm();
-
-    </script>
 </div>
 
-    <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-                m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+<script>
+    (function(i, s, o, g, r, a, m) {
+        i['GoogleAnalyticsObject'] = r;
+        i[r] = i[r] || function() {
+            (i[r].q = i[r].q || []).push(arguments);
+        }, i[r].l = 1 * new Date();
+        a = s.createElement(o),
+            m = s.getElementsByTagName(o)[0];
+        a.async = 1;
+        a.src = g;
+        m.parentNode.insertBefore(a, m);
+    })(window, document, 'script', '//www.google-analytics.com/analytics.js', 'ga');
 
-        ga('create', 'UA-73028518-1', 'auto');
-        ga('send', 'pageview');
+    ga('create', 'UA-73028518-1', 'auto');
+    ga('send', 'pageview');
 
-    </script>
+</script>
 
-@RenderSection("scripts", required: false)
+@RenderSection("scripts", false)
 </body>
 </html>
