--- a/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Layout.cshtml
@@ -4,6 +4,9 @@
 <head>
     <meta charset="utf-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Free online music service!">
+    <meta name="keywords" content="music, holy, stream, holystream">
+    <meta name="author" content="HolySquad">
     <title>@ViewBag.Title HolyStream</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/jquery")
