removed redundant icons

--- a/src/NoName/WebLayer/Views/Shared/_Player.cshtml
+++ b/src/NoName/WebLayer/Views/Shared/_Player.cshtml
@@ -7,10 +7,10 @@
         <li class="fa fa-play playerBtn playStop" style="margin-left: 32px;" onclick="holyplayer.togglePlay()"> </li>
         <li class="fa fa-backward playerBtn" onclick="holyplayer.back()"></li>
         <li class="fa fa-forward playerBtn" onclick="holyplayer.forward()"></li>
-        <li class="fa fa-clock-o playerTime">
+        <li class="fa  playerTime">
             <span id="timeState"></span>
         </li>
-        <li class="fa fa-file-sound-o playerFileName">
+        <li class="fa playerFileName">
             <span class="text-capitalize" id="playerCurrentSong"></span>
         </li>
     </ul>
