--- a/src/NoName/WebLayer/Views/Home/Index.cshtml
+++ b/src/NoName/WebLayer/Views/Home/Index.cshtml
@@ -1,3 +1,3 @@
-﻿<audio controls>
-    <source src="http://prem2.di.fm:80/melodicprogressive_hi?de21b1c5d34b159afd4912ee" type="audio/mp3"/>
-</audio>
+﻿<div class="row">
+    <img src="~/Content/Images/giphy.gif" />
+</div>
